# solanatictactoe

./: Anchor.toml  README.md  package.json  tsconfig.json
app/: package.json
app/src/: App.css  App.tsx  index.css
app/src/components/: Navigation.tsx
app/src/pages/: EscrowPage.tsx  TicTacToe.css  TicTacToe.tsx
app/src/utils/idls/: tictactoe.json  tictactoe.ts
programs/tictactoe/: Cargo.toml
programs/tictactoe/src/: lib.rs
tests/: errors.ts  programId.ts  tictactoe.ts
tests/accounts/: GameState.ts  index.ts
tests/instructions/: create.ts  index.ts  play.ts
tests/types/: Mark.ts  Sign.ts  Status.ts  index.ts
